# netdata-mcp-server

./: ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  claude_desktop_config.example.json  configure.py  pyproject.toml
examples/: usage.py
src/netdata_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
